--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <div class="text-center">
-            <h1>Welcome to Express Server</h1>
-            <p class="lead">This is a testing server for Express JS</p>
-            <a href="http://localhost:3000/products" class="btn">Get Started</a>
+            <h1>E-commerce</h1>
+            <p class="lead">welcome to this shop lol</p>
+            <a href="http://localhost:3000/products" class="btn">see products</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
