client side api requests

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Express Server Testing</title>
     <link rel="stylesheet" href="./style.css">
-    <script defer src="index.mjs"></script>
+    <script type="module" defer src="index.mjs"></script>
 </head>
 <body>
     <div class="container">
