formating the files

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Express Server Testing</title>
-    <link rel="stylesheet" href="./style.css">
-    <script type="module" defer src="index.mjs"></script>
+    <link rel="stylesheet" href="./indexstyle.css">
+    <script defer src="./index.mjs"></script>
 </head>
 <body>
     <div class="container">
