--- a/public/products/products.html
+++ b/public/products/products.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./prodstyle.css">
     <script type="module" defer src ="products.js"></script>
+    
     <title>Document</title>
 
 
@@ -13,6 +15,6 @@
     <div id = "div">
 <p id="list"></p>
 </div>
-    <button id = "btn">get product </button>
+    <button id = "btn" style="background-color: rgb(0, 38, 255);">get product </button>
 </body>
 </html>
