formating the files

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -4,18 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Express Server Testing</title>
-    <link rel="stylesheet" href="./indexstyle.css">
+    <link  rel="stylesheet" href="../assets/style.css">
     <script defer src="./index.mjs"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="text-center">
+
+<header><h1>
+    <img type="vector" href="../assets/LOGO6.svg">
+    <a href="/products">Products</a>
+</h1></header>
             <h1>E-commerce</h1>
             <p class="lead">welcome to this shop lol</p>
             <a href="http://localhost:3000/products" class="btn">see products</a>
-        </div>
-    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     
+
+
+
+
+<footer class="spacer">
+
+    <a href="/about">About us</a>
+
+
+</footer>
+
 </body>
 </html>
