--- a/public/products/products.html
+++ b/public/products/products.html
@@ -24,10 +24,20 @@
     <br></br>
 
 
-    <div>
+<div class="form-container" style="background-color: rgb(8, 121, 201); border-radius: 10px ; display: flex;">
+    <input id="prod_id" value="input a id"  ></input>
+    <input id="prod_name" value="input a name" ></input>
+    <input id="prod_price" value="input a price" > </input>
+    <button id="submit" style="border-radius: 10px; text-decoration: none; font-family: 'Courier New', Courier, monospace;">submit</button>
+</div>
 
+    <div>
        <p style="font-weight: bold;">NAME : </p> <p id = "pname"> </p>
        <p style="font-weight: bold;"> PRICE :</p> <p id = "pprice"> </p>
+
+
+
+
 
     </div>
 
@@ -38,6 +48,8 @@
     
     </footer>
 
+
     
 </body>
 </html>
+ 
